sample/retrieveUnpackaged/objects/PKB_Article_Feedback_Deflection__c.object
<CustomObject>
    <description>Stores data about feedback provided to an article and any customer deflection the article may have contributed to.</description>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Number__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Deflection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deflection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback_Source__c</fullName>
        <label>Feedback Source</label>
        <picklist>
            <picklistValues>
                <fullName>ContactUs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RelatedArticle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Keyword_Searched__c</fullName>
        <description>Keyword searched, if any, prior to the user entering this feedback or deflection.</description>
        <inlineHelpText>Keyword searched, if any, prior to the user entering this feedback or deflection.</inlineHelpText>
        <label>Keyword Searched</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_ID__c</fullName>
        <label>Session ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PKB Article Deflection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Article_Title__c</columns>
        <columns>Comments__c</columns>
        <columns>Deflection__c</columns>
        <columns>Feedback_Source__c</columns>
        <columns>Keyword_Searched__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AFD-{0000000}</displayFormat>
        <label>PKB Article Feedback &amp; Deflection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKB Article Deflection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>